Fix links alignment

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -52,12 +52,12 @@ a:hover {
 
 .btn-period {
   color: #02a781;
-  border-color: #02a781;
+  border-color: #4dc1a6;
 }
 
 .btn-period:hover {
   color: #fff;
-  background-color: #02a781;
+  background-color: #4dc1a6;
 }
 
 .ledger {
